--- a/catalog.html
+++ b/catalog.html
@@ -11,17 +11,36 @@
 </head>
 
 <body>
+<div class="container-main">
 <!--HEADER START-->
+    <div style="height: 200px; background-color: red; opacity: 0.5;"></div>
+
+
+    <header class="header-nav">
+
+        <div class="logo"></div>
+        <div  class="header-title"></div>
+
+        <input id="burger" type="checkbox">
+        <label for="burger"></label>
+
+        <nav>
+            <ul>
+                <li><a class="menu-link" href="index.html">Главная</a></li>
+                <li><a class="menu-link" href="catalog.html">Каталог продукции</a></li>
+                <li><a class="menu-link" href="form.html">Подбор программы</a></li>
+            </ul>
+        </nav>
+    </header>
 <!--HEADER END-->
 
 <!--MAIN CONTENT START-->
 
 
 
-
-
-
+</div> <!--container-main end-->
 <!--MAIN CONTENT END-->
+
 </body>
 
 </html>
