--- a/form.html
+++ b/form.html
@@ -11,7 +11,27 @@
 </head>
 
 <body>
+<div class="container-main">
 <!--HEADER START-->
+    <div style="height: 200px; background-color: red; opacity: 0.5;"></div>
+
+
+    <header class="header-nav">
+
+        <div class="logo"></div>
+        <div  class="header-title"></div>
+
+        <input id="burger" type="checkbox">
+        <label for="burger"></label>
+
+        <nav>
+            <ul>
+                <li><a class="menu-link" href="index.html">Главная</a></li>
+                <li><a class="menu-link" href="catalog.html">Каталог продукции</a></li>
+                <li><a class="menu-link" href="form.html">Подбор программы</a></li>
+            </ul>
+        </nav>
+    </header>
 <!--HEADER END-->
 
 <!--MAIN CONTENT START-->
@@ -38,7 +58,7 @@
 
 <fieldset>
     <div class="checkbox-container">
-        <input class="checkbox" type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+        <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
         <label for="vehicle1"> I have a bike</label>
     </div>
     <div class="checkbox-container">
@@ -48,6 +68,8 @@
 </fieldset>
 
 
+
+</div> <!--container-main end-->
 <!--MAIN CONTENT END-->
 </body>
 
