--- a/index.html
+++ b/index.html
@@ -11,7 +11,28 @@
 </head>
 
 <body>
+<div class="container-main">
+
 <!--HEADER START-->
+    <div style="height: 200px; background-color: red; opacity: 0.5;"></div>
+
+
+    <header class="header-nav">
+
+        <div class="logo"></div>
+        <div  class="header-title"></div>
+
+        <input id="burger" type="checkbox">
+        <label for="burger"></label>
+
+        <nav>
+            <ul>
+                <li><a class="menu-link" href="index.html">Главная</a></li>
+                <li><a class="menu-link" href="catalog.html">Каталог продукции</a></li>
+                <li><a class="menu-link" href="form.html">Подбор программы</a></li>
+            </ul>
+        </nav>
+    </header>
 <!--HEADER END-->
 
 <!--MAIN CONTENT START-->
@@ -22,6 +43,7 @@
 
 
 <!--MAIN CONTENT END-->
+</div> <!--end container-->
 </body>
 
 </html>
