--- a/markup.html
+++ b/markup.html
@@ -11,21 +11,35 @@
 </head>
 
 <body>
+<div class="container-main">
+
+
+
 <!--HEADER START-->
-<header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="catalog.html">Каталог продукции</a></li>
-            <li><a href="form.html">Подбор программы</a></li>
-        </ul>
-    </nav>
-</header>
+    <div style="height: 200px; background-color: red; opacity: 0.5;"></div>
+
+
+    <header class="header-nav">
+
+        <div class="logo"></div>
+        <div class="header-title"></div>
+
+        <input id="burger" type="checkbox">
+        <label for="burger"></label>
+
+        <nav>
+            <ul>
+                <li><a class="menu-link" href="index.html">Главная</a></li>
+                <li><a class="menu-link" href="catalog.html">Каталог продукции</a></li>
+                <li><a class="menu-link" href="form.html">Подбор программы</a></li>
+            </ul>
+        </nav>
+    </header>
 <!--HEADER END-->
 
 <!--MAIN CONTENT START-->
 
-<div class="container-main">
+
     <h1>MarkUp</h1>
     <div class="container-grid-2col">
         <div class="card">
@@ -42,7 +56,7 @@
                 <li><a href="form.html">Форма</a></li>
             </ol>
             <ul>
-                <li>header</li>
+                <li>header 💜</li>
                 <li>footer</li>
             </ul>
         </div>
@@ -76,13 +90,22 @@
         </div>
         <div class="card">
             <h2>5. checkbox, radio, button, ol, ul, scroll</h2>
+            <div class="checkbox-container">
+                <input type="radio" id="radio">
+                <label for="radio">radio</label>
+            </div>
+            <div class="checkbox-container">
+                <input type="checkbox" id="checkbox">
+                <label for="checkbox">checkbox</label>
+            </div>
             <ul>
-                <li>checkbox ✔</li>
-                <li>radio ✔</li>
-                <li><button class="button-main">Button-main</button></li>
-                <li>button index</li>
-                <li>grey button</li>
+                <li><button class="button-catalog-main">заказать</button></li>
+                <li>OPACITY 💜</li>
+                <li>button index 💜</li>
+                <li>grey button 💜</li>
                 <li>input</li>
+                <li>scroll</li>
+                <li>link</li>
                 <li>back-to-top button</li>
             </ul>
         </div>
@@ -91,7 +114,7 @@
             <ol>
                 <li>container ✔</li>
                 <li>columns ✔</li>
-                <li>breakpoints</li>
+                <li>breakpoints 💜</li>
                 <li>tablet</li>
                 <li>mobile</li>
             </ol>
