--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
 
     <header class="header-nav">
 
-        <div class="logo"></div>
+         <a href="index.html"><div class="logo"></div></a>
         <div  class="header-title"></div>
 
         <input id="burger" type="checkbox">
@@ -27,7 +27,7 @@
         <nav>
             <ul>
                 <li><a class="menu-link" href="index.html">Главная</a></li>
-                <li><a class="menu-link" href="catalog.html">Каталог продукции</a></li>
+                <li><a class="menu-link active" href="catalog.html">Каталог продукции</a></li>
                 <li><a class="menu-link" href="form.html">Подбор программы</a></li>
             </ul>
         </nav>
