--- a/index.html
+++ b/index.html
@@ -12,14 +12,10 @@
 
 <body>
 <div class="container-main">
-
 <!--HEADER START-->
-    <div style="height: 200px; background-color: red; opacity: 0.5;"></div>
-
-
     <header class="header-nav">
 
-        <div class="logo"></div>
+         <a href="index.html"><div class="logo"></div></a>
         <div  class="header-title"></div>
 
         <input id="burger" type="checkbox">
@@ -27,7 +23,7 @@
 
         <nav>
             <ul>
-                <li><a class="menu-link" href="index.html">Главная</a></li>
+                <li><a class="menu-link active" href="index.html">Главная</a></li>
                 <li><a class="menu-link" href="catalog.html">Каталог продукции</a></li>
                 <li><a class="menu-link" href="form.html">Подбор программы</a></li>
             </ul>
@@ -35,15 +31,35 @@
     </header>
 <!--HEADER END-->
 
+
 <!--MAIN CONTENT START-->
+    <section class="banner">
+        <div class="bg-img"></div>
+
+        <h1>Функциональное питание для котов</h1>
+        <p class="title-4">Занялся собой? Займись котом!</p>
+        <a href="form.html"><button class="button-catalog-main button-big">подобрать программу</button></a>
+    </section>
 
 
-
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br><br>
 
 
 
 <!--MAIN CONTENT END-->
-</div> <!--end container-->
+</div> <!--end container-main-->
 </body>
 
 </html>
