--- a/markup.html
+++ b/markup.html
@@ -21,7 +21,7 @@
 
     <header class="header-nav">
 
-        <div class="logo"></div>
+         <a href="index.html"><div class="logo"></div></a>
         <div class="header-title"></div>
 
         <input id="burger" type="checkbox">
@@ -100,9 +100,9 @@
             </div>
             <ul>
                 <li><button class="button-catalog-main">заказать</button></li>
-                <li>OPACITY 💜</li>
-                <li>button index 💜</li>
-                <li>grey button 💜</li>
+                <li>OPACITY ✔</li>
+                <li><button class="button-catalog-main button-big">подобрать программу</button></li>
+                <li><button class="button-catalog-main button-grey">показать все</button></li>
                 <li>input</li>
                 <li>scroll</li>
                 <li>link</li>
