--- a/markup.html
+++ b/markup.html
@@ -105,7 +105,9 @@
                 <li><button class="button-catalog-main button-grey">показать все</button></li>
                 <li>input</li>
                 <li>scroll</li>
-                <li>link</li>
+                <li>
+                    <a class="link-arrow">каталог slim</a><line></line>
+                </li>
                 <li>back-to-top button</li>
             </ul>
         </div>
