--- a/index.html
+++ b/index.html
@@ -34,12 +34,37 @@
 
 <!--MAIN CONTENT START-->
     <section class="banner">
-        <div class="bg-img"></div>
+        <div class="banner--bg-img"></div>
 
         <h1>Функциональное питание для котов</h1>
         <p class="title-4">Занялся собой? Займись котом!</p>
         <a href="form.html"><button class="button-catalog-main button-big">подобрать программу</button></a>
     </section>
+
+    <div class="container-grid-2col">
+        <div class="card-program">
+            <div class="row">
+                <div class="card-program--picture">
+                    <img src="img/index/program-slim.svg" alt="picture-cat">
+                </div>
+                
+                <h3>похудение</h3>
+            </div>
+            <p>Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+            <a class="link-arrow" href="catalog.html">каталог slim</a>
+        </div>
+
+        <div class="card-program">
+            <div class="row">
+                <div class="card-program--picture">
+                   <img src="img/index/program-pro.svg" alt="picture-cat">
+                </div>
+                <h3>набор массы</h3>
+            </div>
+            <p>Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <a class="link-arrow" href="catalog.html">каталог pro</a>
+        </div>
+    </div>
 
 
     <br>
