index first screen

--- a/index.html
+++ b/index.html
@@ -31,55 +31,107 @@
     </header>
 <!--HEADER END-->
 
-
 <!--MAIN CONTENT START-->
-    <section class="banner">
-        <div class="banner--bg-img"></div>
 
-        <h1>Функциональное питание для котов</h1>
-        <p class="title-4">Занялся собой? Займись котом!</p>
-        <a href="form.html"><button class="button-catalog-main button-big">подобрать программу</button></a>
+
+    <section class="banner">
+        <div class="banner--background-img"></div>
+
+        <div class="banner--content-box">
+            <h1>Функциональное питание для котов</h1>
+            <p class="title-4">Занялся собой? Займись котом!</p>
+            <img src="img/index/banner-img.png" alt="picture">
+            <a href="form.html"><button class="button-catalog-main button-big">подобрать программу</button></a>
+        </div>
     </section>
 
-    <div class="container-grid-2col">
-        <div class="card-program">
-            <div class="row">
-                <div class="card-program--picture">
-                    <img src="img/index/program-slim.svg" alt="picture-cat">
+
+
+    <section class="container-grid-2col">
+        <div class="category">
+            <div class="row-box">
+                <div class="category--picture">
+                    <img src="img/index/category-icon-slim.svg" alt="picture-cat">
                 </div>
-                
                 <h3>похудение</h3>
             </div>
             <p>Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
             <a class="link-arrow" href="catalog.html">каталог slim</a>
         </div>
 
-        <div class="card-program">
-            <div class="row">
-                <div class="card-program--picture">
-                   <img src="img/index/program-pro.svg" alt="picture-cat">
+        <div class="category">
+            <div class="row-box">
+                <div class="category--picture">
+                   <img src="img/index/category-icon-pro.svg" alt="picture-cat">
                 </div>
                 <h3>набор массы</h3>
             </div>
             <p>Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
             <a class="link-arrow" href="catalog.html">каталог pro</a>
         </div>
-    </div>
+    </section>
 
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br><br>
+    <section class="how-it-works">
+        <h2>Как это работает</h2>
+        <ol class="container-grid-2col">
+            <div class="container-grid-2col-inner">
+                <li> <!--1-->
+                    <div>
+                        <img src="img/index/how-it-works-icon-1.svg">
+                    </div>
+                    <p>Функциональное питание содержит только полезные питательные вещества.</p>
+                </li>
+                <li><!--2-->
+                    <div>
+                        <img src="img/index/how-it-works-icon-2.svg">
+                    </div>
+                    <p>Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+                </li>
+            </div>
+            <div class="container-grid-2col-inner">
+                <li> <!--3-->
+                    <div>
+                        <img src="img/index/how-it-works-icon-3.svg">
+                    </div>
+                    <p>Замените один-два приема обычной еды на наше функциональное питание.</p>
+                </li>
+                <li> <!--4-->
+                    <div>
+                        <img src="img/index/how-it-works-icon-4.svg">
+                    </div>
+                    <p>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+                </li>
+            </div>
+        </ol>
+    </section>
+
+
+    <section class="example">
+    <h2>Живой пример</h2>
+
+        <div class="container-grid-2col">
+            <div class="example--description">
+                <p>Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+                <div class="statistics">
+                    <div class="row-box">
+                        <div>5 кг</div>
+                        <div>60 дней</div>
+                    </div>
+                    <p>
+                        <span>затраты на питание:</span>
+                        <span>7 000 грн.</span>
+                    </p>
+                </div>
+            </div>
+            <div class="example--slider">
+
+            </div>
+        </div>
+    </section>
+    <br><br><br><br><br><br><br><br><br><br><br>
+
+
 
 
 
