home page complete

--- a/index.html
+++ b/index.html
@@ -151,14 +151,56 @@
             </div>
         </div>
     </section>
-    <br><br><br><br><br><br><br><br><br><br><br>
-
-
-
 
 
 <!--MAIN CONTENT END-->
 </div> <!--end container-main-->
+
+
+    <div class="map">
+        <div class="container-main">
+            <div class="map--info">
+                <div class="title-4">приглашаем к сотрудничеству дилеров!</div>
+                <address>
+                    <span>Майдан Незалежності, 2</span>
+                    <span>Київ</span>
+                    <span>Україна</span>
+                </address>
+            </div>
+        </div>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.492206497642!2d30.521075400955887!3d50.45055844513794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce50f8b6e3c3%3A0xb528dc4d6dadc4f8!2sIndependence%20Square%2C%20Kyiv%2C%20Ukraine%2C%2002000!5e0!3m2!1sen!2sus!4v1664845054984!5m2!1sen!2sus" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
+    <footer class="footer">
+        <div class="container-main">
+
+            <a href="index.html"><img src="img/footer-logo.svg" alt="logo"></a>
+
+            <div class="social-media">
+                <a href="https://vk.com/">
+                    <div class="social-media-icon" style="background-position: 0 0;"></div>
+                </a>
+                <a href="https://www.instagram.com/">
+                    <div class="social-media-icon" style="background-position: -57px 0;"></div>
+                </a>
+                <a href="https://www.facebook.com/">
+                    <div class="social-media-icon" style="background-position: -109px 0;"></div>
+                </a>
+            </div>
+
+            <p class="alona">
+                <a href="https://www.linkedin.com/in/alona-usova-vi-fein/">Alona Usova</a>
+            </p>
+        </div>
+    </footer>
+
+
+
+
+
+
+
 
 <script src="js/index--before-after-slider.js"></script>
 
