--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-<div class="container-main">
-<!--HEADER START-->
-    <header class="header-nav">
 
-         <a href="index.html"><div class="logo"></div></a>
+<!--HEADER START-->
+    <header class="header-nav container-main">
+
+        <a href="index.html"><div class="logo"></div></a>
         <div  class="header-title"></div>
 
         <input id="burger" type="checkbox">
@@ -32,7 +32,7 @@
 <!--HEADER END-->
 
 <!--MAIN CONTENT START-->
-
+<div class="container-main">
 
     <section class="banner">
 
@@ -157,6 +157,10 @@
 </div> <!--end container-main-->
 
 
+
+
+
+<!--MAP FOOTER START-->
     <div class="map">
         <div class="container-main">
             <div class="map--info">
@@ -194,9 +198,7 @@
             </p>
         </div>
     </footer>
-
-
-
+<!--MAP FOOTER END-->
 
 
 
