--- a/markup.html
+++ b/markup.html
@@ -11,17 +11,14 @@
 </head>
 
 <body>
-<div class="container-main">
+
 
 
 
 <!--HEADER START-->
-    <div style="height: 200px; background-color: red; opacity: 0.5;"></div>
+    <header class="header-nav container-main">
 
-
-    <header class="header-nav">
-
-         <a href="index.html"><div class="logo"></div></a>
+        <a href="index.html"><div class="logo"></div></a>
         <div class="header-title"></div>
 
         <input id="burger" type="checkbox">
@@ -38,28 +35,31 @@
 <!--HEADER END-->
 
 <!--MAIN CONTENT START-->
+<div class="container-main">
 
+    <h1>MarkUp 💜</h1>
 
-    <h1>MarkUp</h1>
     <div class="container-grid-2col">
         <div class="card">
             <h2>1. Colors ✅</h2>
             <div class="color-box color-primary">color-primary</div>
             <div class="color-box color-secondary">color-secondary</div>
         </div>
+
         <div class="card">
             <h2>2. Site map</h2>
             <ol>
-                <li><a href="markup.html">Markup</a></li>
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="catalog.html">Каталог</a></li>
-                <li><a href="form.html">Форма</a></li>
+                <li><a href="markup.html">Markup ✔</a></li>
+                <li><a href="index.html">Главная ✔</a></li>
+                <li><a href="catalog.html">Каталог ❤️</a></li>
+                <li><a href="form.html">Форма ❤️</a></li>
             </ol>
             <ul>
-                <li>header 💜</li>
-                <li>footer</li>
+                <li>header ✔</li>
+                <li>footer ✔</li>
             </ul>
         </div>
+
         <div class="card">
             <h2>3. Fonts ✅</h2>
             <ol>
@@ -103,12 +103,12 @@
                 <li>OPACITY ✔</li>
                 <li><button class="button-catalog-main button-big">подобрать программу</button></li>
                 <li><button class="button-catalog-main button-grey">показать все</button></li>
-                <li>input</li>
-                <li>scroll</li>
+                <li>input ❤️</li>
+                <li>scroll ❤️</li>
                 <li>
                     <a class="link-arrow">каталог slim</a><line></line>
                 </li>
-                <li>back-to-top button</li>
+                <li>back-to-top button ❤️</li>
             </ul>
         </div>
         <div class="card">
@@ -116,7 +116,7 @@
             <ol>
                 <li>container ✔</li>
                 <li>columns ✔</li>
-                <li>breakpoints 💜</li>
+                <li>breakpoints ✔</li>
                 <li>tablet</li>
                 <li>mobile</li>
             </ol>
@@ -124,18 +124,18 @@
         <div class="card">
             <h2>7. padding, margin</h2>
             <ol>
-                <li>padding</li>
-                <li>margin</li>
-                <li></li>
+                <li>padding ❤️</li>
+                <li>margin 💜</li>
             </ol>
         </div>
         <div class="card">
             <h2>8. Check</h2>
             <ol>
-                <li>favicon</li>
-                <li>lang</li>
-                <li>head</li>
-                <li>cursor</li>
+                <li>favicon ❤️</li>
+                <li>lang ❤️</li>
+                <li>head ❤️</li>
+                <li>cursor ❤️</li>
+                <li>hover colors ❤️</li>
             </ol>
         </div>
 
